# telomere

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
buildScripts/: postbuild.js
src/: lib.ts
src/telomere/: index.ts  telomere-wrapper.ts  telomere.test.ts  testUtils.ts  wasm-interface-type.ts
src/telomere/tests/: perf.test.ts  regressions.test.ts  telomere.test.ts
telomere-json-wasm/: Cargo.toml
telomere-json-wasm/src/: lib.rs
